# pal-engine-base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
assets/midi/: README.md
assets/samples/: README.md
assets/sprites/: README.md
src/: main.c  pal_backend.c
